<resources>
    <string name="app_name">IS Health4U</string>
    <string name="tv1">BIENVENIDO</string>
    <string name="BotonMas">+</string>
    <string name="tv2">Empieza creando tu perfil</string>
    <string name="tv3">INGRESA TUS DATOS</string>
    <string name="tv4">NOMBRE</string>
    <string name="Et">Ingresar Nombre...</string>
    <string name="BotonSiguiente">SIGUIENTE</string>
    <string name="tv5">FECHA DE NACIMIENTO</string>
    <string name="Et2">dd/mm/aaaa</string>
    <string name="tv6">*OPCIONAL</string>
    <string name="tv7">ENFERMEDAD DE BASE</string>
    <string name="tv8">PESO</string>
    <string name="et3">Ej: Diabetes, etc...</string>
    <string name="et4">Ej: 60 Kg...</string>
    <string name="BotonGuardar">GUARDAR</string>
</resources>