<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B1D0E0"
    android:backgroundTint="#B1D0E0"
    android:foregroundGravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:touchscreenBlocksFocus="true"
    tools:context=".IngresarName">

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="219dp"
        android:text="@string/tv3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:text="@string/tv4"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Et"
        android:inputType="text"
        android:textSize="23sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="133dp"
        android:layout_height="62dp"
        android:backgroundTint="#406882"
        android:onClick="Siguiente"
        android:text="@string/BotonSiguiente"
        android:textSize="19sp"
        android:translationY="30dp" />
</LinearLayout>