<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#406882"
    android:backgroundTint="#406882"
    android:foregroundGravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:touchscreenBlocksFocus="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="247dp"
        android:layout_height="83dp"
        android:layout_marginTop="140dp"
        android:text="@string/tv1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:text="@string/tv2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginBottom="144dp"
        android:backgroundTint="#B8B1E0"
        android:onClick="Mas"
        android:rotationX="0"
        android:selectAllOnFocus="false"
        android:soundEffectsEnabled="false"
        android:text="@string/BotonMas"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHighlight="#B8B1E0"
        android:textColorHint="#0FFFFFFF"
        android:textColorLink="#B8B1E0"
        android:textSize="24sp"
        android:translationX="0dp" />

</LinearLayout>